src/test/deca/context/invalid/custom/affect-incompatible-type-value.deca
// Description:
//    Affectation et typage sur valeur
//
// Resultats:
//    Ligne 12: Affectation d'une valeur sur un type incompatibles.
//    Selon page 75 du poly.
// Remarque : la reciproque est accepte.
// Historique:
//    cree le 01/01/2022

{
   // Doit etre refuse.
    int a = 1.2f;
}
